# PatchAgent

./: .dockerignore  .env.template  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  pre-commit.yaml  push-to-ghcr.yaml  release.yaml  test-parser.yaml  test.yaml
patchagent/: context.py  lang.py  logger.py  task.py  utils.py
patchagent/.bear/: bear.sh  helper.py
patchagent/agent/: base.py  generator.py  utils.py
patchagent/agent/clike/: common.py  openai.py  prompt.py
patchagent/agent/clike/proxy/: default.py  internal.py  utils.py
patchagent/agent/java/: common.py  openai.py  prompt.py
patchagent/agent/java/proxy/: default.py  internal.py  utils.py
patchagent/builder/: __init__.py  builder.py  ossfuzz.py  utils.py
patchagent/example/: clamav.py  hamcrest.py
patchagent/lsp/: clangd.py  ctags.py  hybridc.py  java.py  language.py
patchagent/parser/: __init__.py  address.py  cwe.py  java_native.py  jazzer.py  leak.py  libfuzzer.py  memory.py  sanitizer.py  thread.py  undefined.py  unknown.py  utils.py
patchagent/tests/: __main__.py  test_cwe.py  test_parser.py
patchagent/tests/address/augeas/OSV-2020-1540/: report.txt  summary.txt
patchagent/tests/address/augeas/crash-93643b14c3d84fe7a7fce0c20f14acdcac9f5c01/: reports.txt  summary.txt
patchagent/tests/address/bluez/OSV-2022-908/: summary.txt
patchagent/tests/address/c-blosc2/OSV-2020-2183/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2020-2184/: report.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-1070/: report.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-1589/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-1672/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-1791/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-207/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-21/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-213/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-221/: report.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-246/: report.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-247/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-27/: summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-271/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-274/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-366/: report.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-369/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-371/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-382/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-404/: summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-422/: reports.txt
patchagent/tests/address/c-blosc2/OSV-2021-428/: report.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-429/: report.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-464/: summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-476/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-481/: reports.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-485/: report.txt  summary.txt
patchagent/tests/address/c-blosc2/OSV-2021-496/: summary.txt
(+3418 files in other folders)
