[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchagent"
version = "0.1.0"
description = "An LLM-based practical program repair agent that mimics human expertise"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Zheng Yu", email = "dataisland@outlook.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "aiohappyeyeballs>=2.4.6",
    "clang==16.0.1",
    "colorama>=0.4.6",
    "GitPython>=3.1.44",
    "ipdb>=0.13.13",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.39",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.7",
    "litellm>=1.61.16",
    "matplotlib>=3.10.0",
    "openai>=1.64.0",
    "openpyxl>=3.1.5",
    "pika>=1.3.2",
    "prettytable>=3.14.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
    "unidiff>=0.7.5",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "flake8==7.1.2",
    "isort==6.0.0",
    "pre-commit>=4.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
patchagent = "patchagent.cli:main"

[project.urls]
"Homepage" = "https://github.com/cla7aye15I4nd/PatchAgent"
"Bug Tracker" = "https://github.com/cla7aye15I4nd/PatchAgent/issues"
"Documentation" = "https://github.com/cla7aye15I4nd/PatchAgent#readme"

[tool.black]
line-length = 179

[tool.isort]
profile = "black"
line_length = 179

[tool.setuptools]
packages = ["patchagent"]
include-package-data = true

[tool.setuptools.package-data]
patchagent = ["*"]

[tool.setuptools.exclude-package-data]
patchagent = [
    "**/__pycache__",
    "**/.*.swp",
    "**/.DS_Store",
]

[tool.pytest.ini_options]
testpaths = ["patchagent/tests"]
python_files = "test_*.py"
python_functions = "test_*"
